[package]
name = "n2i-weather"
version = "0.1.0"
authors = ["Greg Heartsfield <scsibug@imap.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats = "0.8.6"
cloudevents-sdk = "0.3.0"
serde_json = "1.0.60"
influxdb = { version = "0.3.0", features = ["derive"] }
chrono = "0.4"
async-std = { version = "1.8.0",  features = ["attributes"] }
